[project]
name = "ai-pinboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
authors = [
    {name = ":Barry-Thomas-Paul: Moss", email = "ai_pinboard@pm.amourspirit.net"}
]
license = {file = "LICENSE"}
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "markdown>=3.8.2",
    "pbwrap>=1.5.0",
    "pinboard>=2.1.9",
    "requests>=2.32.4",
    "yt-dlp>=2025.6.30",
]
